--- a/module/Frontend/view/v1/frontend/user/index.phtml
+++ b/module/Frontend/view/v1/frontend/user/index.phtml
@@ -1,6 +1,6 @@
 <?php
 $arrDetailUser = $this->arrDetailUser;
-$avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_avatar_male.jpg' : '';
+$avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_avatar_male.jpg' : json_decode($arrDetailUser['user_avatar'],true)[0]['thumbImage']['150x150'];
 ?>
 <section id="page-head">
     <div class="container">
@@ -55,7 +55,7 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
                                                             <img class="prod-images" src="<?php echo $avatar; ?>"><br/>
                                                             <div class="pull-right">
                                                                 <a class="tooltips edit pull-left" title="Chọn ảnh đại điện khác" data-toggle="tooltip"><i class="fa fa-upload" aria-hidden="true"></i></a>  
-                                                                <a target="_bank" href="<?php echo $avatar; ?>" class="tooltips view-images" data-placement="top" data-original-title="Xem"><i class="fa fa-search"></i></a>
+                                                                <input type="file" style="display: none">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -101,4 +101,6 @@ $avatar = empty($arrDetailUser['user_avatar']) ? STATIC_URL . '/f/v1/images/no_a
     </div>
 </section>
 <script>
+    changeAvatarURL = '<?php echo $this->serverUrl() . $this->Url('user-change-avatar'); ?>';
+    User.index();
 </script>
