--- a/module/Frontend/view/v1/frontend/user/list-messages.phtml
+++ b/module/Frontend/view/v1/frontend/user/list-messages.phtml
@@ -22,25 +22,27 @@
                                     <table class="table table-inbox table-hover">
                                         <thead class="">
                                             <tr>
-                                                <td class="text-center" width="60"><input type="checkbox" class="mail-checkbox"><b>All</b></td>
+                                                <td class="text-center" width="60"><input type="checkbox" class="mail-checkbox check-all"><b>All</b></td>
                                                 <td colspan="3"><a class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
                                             </tr>
                                             <tr>
                                                 <th class="text-center"></th>
                                                 <th class="text-center"><i class="fa fa-user"></i> Người gửi</th>
                                                 <th class="text-center"><i class="fa fa-envelope-o" aria-hidden="true"></i></i> Nội dung</th>
-                                                <th class="text-center"><i class="fa fa-close" aria-hidden="true"></i></i> Gửi lúc</th>
+                                                <th class="text-center"><i class="fa fa-clock-o" aria-hidden="true"></i> Gửi lúc</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr class="unread">
-                                                <td class="text-center">
-                                                    <input type="checkbox" class="mail-checkbox">
-                                                </td>
-                                                <td class="text-center">Vector Lab</td>
-                                                <td class="text-center">Lorem ipsum dolor imit set.</td>
-                                                <td class="text-center">9:27 AM</td>
-                                            </tr>
+                                            <?php foreach ($this->arrMessagesList as $arrMessages): ?>
+                                                <tr class="<?php echo $arrMessages['is_view'] ? null : 'unread'; ?>">
+                                                    <td class="text-center">
+                                                        <input type="checkbox" class="mail-checkbox item" value="<?php echo $arrMessages['mess_id']; ?>">
+                                                    </td>
+                                                    <td class="text-center"><?php echo $this->arrUserList[$arrMessages['user_created']]['user_fullname']; ?></td>
+                                                    <td class="text-center"><a href="javascript:;" style="text-decoration: none" class="read-messages" rel="<?php echo $arrMessages['mess_id']; ?>"><?php echo substr($arrMessages['mess_content'], 1, 30) . '...'; ?></a></td>
+                                                    <td class="text-center"><?php echo date('d/m/Y H:i', $arrMessages['created_date']); ?></td>
+                                                </tr>
+                                            <?php endforeach; ?>
                                         </tbody>
                                     </table>
                                 </div>
@@ -52,3 +54,43 @@
         </section>
     </div>
 </section><!--end details-->
+<div class="modal fade" id="modalSendMessages" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="exampleModalLabel">Trả lời tin nhắn</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group col-lg-6">
+                        <label for="recipient-name" class="control-label">Name:</label>
+                        <input type="text" readonly class="form-control" id="recipient-name">
+                    </div>
+                    <div class="form-group col-lg-6">
+                        <label for="recipient-name" class="control-label">Email:</label>
+                        <input type="text" readonly class="form-control" id="recipient-email">
+                    </div>
+                    <div class="form-group">
+                        <label for="title" class="control-label">Tiêu đề</label>
+                        <input type="text" class="form-control" id="title">
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="message-text" class="control-label">Nội dung</label>
+                        <textarea class="form-control" id="message-text" rows="5"></textarea>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Hủy</button>
+                <button type="button" class="btn btn-success btn-send-messages">Gửi</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    getMessagesURL = '<?php echo $this->serverUrl() . $this->Url('user-get-messages'); ?>';
+    User.listMessages();
+</script>
