--- a/static/f/v1/css/default.css
+++ b/static/f/v1/css/default.css
@@ -176,10 +176,10 @@ h5,h6{
     margin: 0 0 10px 0;
 }
 #searchBar form .keyword{
-    width: 500px;
+    width: 100%;
     height: 48px;
     border: 1px solid #3f3d59;
-    color: #cccccc;
+    color: blue;
     font-size: 14px;
     padding: 10px;
     margin: 0 10px 0 0;
@@ -187,17 +187,17 @@ h5,h6{
 }
 #searchBar form .label{
     position: relative;
-    width: 170px;
+    width: 100%;
     margin: 0 10px 0 0;
     display: inline-block;
 }
 #searchBar form .label .select{
-    width: 170px;
+    width: 100%;
     padding: 10px;
     height: 48px;
     border-radius: 0;
     border: 1px solid #3f3d59;
-    color: #cccccc;
+    color: blue;
     display: inline-block;
     cursor: pointer;
     position: relative;
