--- a/module/Frontend/view/v1/frontend/user/list-messages.phtml
+++ b/module/Frontend/view/v1/frontend/user/list-messages.phtml
@@ -95,5 +95,6 @@
 
 <script>
     getMessagesURL = '<?php echo $this->serverUrl() . $this->Url('user-get-messages'); ?>';
+    replayMessagesURL = '<?php echo $this->serverUrl() . $this->Url('user-replay-messages'); ?>';
     User.listMessages();
 </script>
