--- a/module/Frontend/view/v1/frontend/user/list-messages.phtml
+++ b/module/Frontend/view/v1/frontend/user/list-messages.phtml
@@ -47,6 +47,7 @@
                                     </table>
                                 </div>
                             </aside>
+                            <div class=""><?php echo $this->paging;?></div>
                         </div>
                     </div>
                 </div>
